# Veritarc-AI

./: .cursorrules  .env.example  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/app/: evaluation_engine.py  improved_evaluation.py  rag_pipeline.py  retrieval_engine.py  validation_engine.py  validation_engine_v2.py  vector_store.py
cursor/rules/: backend-rule.mdc  domain-rule.mdc  frontend-rule.mdc  general-rule.mdc
data/: sample_sox_controls.json
data/chroma_db/: chroma.sqlite3
data/enhanced_evidence/: enhancement_summary.json  ragas_enhanced_evidence.json
data/evaluation_datasets/: dataset_summary.json  rag_pipeline_dataset.json  ragas_evaluation_questions.json
data/evaluation_results/: ragas_analysis_summary.json  ragas_basic_test.json  ragas_basic_test_summary.json  ragas_detailed_results.json  ragas_improved_results.json  ragas_reduced_analysis_summary.json  ragas_reduced_detailed_results.json
data/qdrant_db/: meta.json
data/synthetic_evidence/: summary_test_evidence.json  test_evidence.json
evaluation_results/: evaluation_report_20250803_171655.json  improved_evaluation_20250803_173711.json
frontend/: streamlit_app.py
scripts/: generate_synthetic_evidence.py  phase2_step2a2_evaluation_dataset.py  phase2_step2a3_ragas_metrics.py  phase2_step2a3_ragas_metrics_improved.py  phase2_step2a3_ragas_metrics_reduced.py  phase2_step2a4_ragas_pipeline_test.py  ragas_step1a_test.py  ragas_step1b_test.py  ragas_step1c_test.py  ragas_step1d_test.py  ragas_step1e_enhanced_generator.py
(+2 files in other folders)
